// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`returns PRG and BRQ suggestions 1`] = `
Array [
  Array [
    Object {
      "city": Object {
        "locationId": "prague_cz",
        "name": "Prague",
        "slug": "prague-czech-republic",
      },
      "country": null,
      "location": Object {
        "lat": 50.1008333,
        "lng": 14.26,
      },
      "locationId": "PRG",
      "name": "Václav Havel Airport Prague",
      "slug": "vaclav-havel-airport-prague-prague-czech-republic",
      "subdivision": null,
      "timezone": "Europe/Prague",
      "type": "airport",
    },
    Object {
      "city": null,
      "country": Object {
        "locationId": "CZ",
        "name": "Czech Republic",
        "slug": "czech-republic",
      },
      "location": Object {
        "lat": 50.0755381,
        "lng": 14.4378005,
      },
      "locationId": "prague_cz",
      "name": "Prague",
      "slug": "prague-czech-republic",
      "subdivision": null,
      "timezone": "Europe/Prague",
      "type": "city",
    },
    Object {
      "city": Object {
        "locationId": "medina_sa",
        "name": "Medina",
        "slug": "medina-saudi-arabia",
      },
      "country": null,
      "location": Object {
        "lat": 24.5533333,
        "lng": 39.705,
      },
      "locationId": "MED",
      "name": "Prince Mohammad bin Abdulaziz",
      "slug": "prince-mohammad-bin-abdulaziz-medina-saudi-arabia",
      "subdivision": null,
      "timezone": "Asia/Riyadh",
      "type": "airport",
    },
    Object {
      "city": Object {
        "locationId": "pristina_xk",
        "name": "Pristina",
        "slug": "pristina-unknown-region",
      },
      "country": null,
      "location": Object {
        "lat": 42.5727778,
        "lng": 21.0358333,
      },
      "locationId": "PRN",
      "name": "Pristina International",
      "slug": "pristina-international-pristina-unknown-region",
      "subdivision": null,
      "timezone": "Europe/Belgrade",
      "type": "airport",
    },
    Object {
      "city": Object {
        "locationId": "gassim_sa",
        "name": "Gassim",
        "slug": "gassim-saudi-arabia",
      },
      "country": null,
      "location": Object {
        "lat": 26.3027778,
        "lng": 43.7738889,
      },
      "locationId": "ELQ",
      "name": "Prince Nayef bin Abdulaziz Regional",
      "slug": "prince-nayef-bin-abdulaziz-regional-gassim-saudi-arabia",
      "subdivision": null,
      "timezone": "Asia/Riyadh",
      "type": "airport",
    },
    Object {
      "city": Object {
        "locationId": "barcelona_es",
        "name": "Barcelona",
        "slug": "barcelona-spain",
      },
      "country": null,
      "location": Object {
        "lat": 41.2969444,
        "lng": 2.07833333,
      },
      "locationId": "BCN",
      "name": "Barcelona–El Prat",
      "slug": "barcelona-el-prat-barcelona-spain",
      "subdivision": null,
      "timezone": "Europe/Madrid",
      "type": "airport",
    },
  ],
  Array [
    Object {
      "city": Object {
        "locationId": "brno_cz",
        "name": "Brno",
        "slug": "brno-czech-republic",
      },
      "country": null,
      "location": Object {
        "lat": 49.1513889,
        "lng": 16.6944444,
      },
      "locationId": "BRQ",
      "name": "Brno–Tuřany",
      "slug": "brno-turany-brno-czech-republic",
      "subdivision": null,
      "timezone": "Europe/Prague",
      "type": "airport",
    },
    Object {
      "city": null,
      "country": Object {
        "locationId": "CZ",
        "name": "Czech Republic",
        "slug": "czech-republic",
      },
      "location": Object {
        "lat": 49.1950602,
        "lng": 16.6068371,
      },
      "locationId": "brno_cz",
      "name": "Brno",
      "slug": "brno-czech-republic",
      "subdivision": null,
      "timezone": "Europe/Prague",
      "type": "city",
    },
    Object {
      "city": null,
      "country": Object {
        "locationId": "BE",
        "name": "Belgium",
        "slug": "belgium",
      },
      "location": Object {
        "lat": 50.8503463,
        "lng": 4.3517211,
      },
      "locationId": "brussels_be",
      "name": "Brussels",
      "slug": "brussels-belgium",
      "subdivision": null,
      "timezone": "Europe/Brussels",
      "type": "city",
    },
    Object {
      "city": Object {
        "locationId": "brussels_be",
        "name": "Brussels",
        "slug": "brussels-belgium",
      },
      "country": null,
      "location": Object {
        "lat": 50.9013889,
        "lng": 4.48444444,
      },
      "locationId": "BRU",
      "name": "Brussels",
      "slug": "brussels-brussels-belgium",
      "subdivision": null,
      "timezone": "Europe/Brussels",
      "type": "airport",
    },
    Object {
      "city": Object {
        "locationId": "brisbane_ql_au",
        "name": "Brisbane",
        "slug": "brisbane-queensland-australia",
      },
      "country": null,
      "location": Object {
        "lat": -27.384167,
        "lng": 153.1175,
      },
      "locationId": "BNE",
      "name": "Brisbane",
      "slug": "brisbane-brisbane-queensland-australia",
      "subdivision": null,
      "timezone": "Australia/Brisbane",
      "type": "airport",
    },
    Object {
      "city": null,
      "country": Object {
        "locationId": "AU",
        "name": "Australia",
        "slug": "australia",
      },
      "location": Object {
        "lat": -27.4697707,
        "lng": 153.0251235,
      },
      "locationId": "brisbane_ql_au",
      "name": "Brisbane",
      "slug": "brisbane-queensland-australia",
      "subdivision": Object {
        "locationId": "QL_AU",
        "name": "Queensland",
        "slug": "queensland-australia",
      },
      "timezone": "Australia/Brisbane",
      "type": "city",
    },
    Object {
      "city": Object {
        "locationId": "bremen_de",
        "name": "Bremen",
        "slug": "bremen-germany",
      },
      "country": null,
      "location": Object {
        "lat": 53.0475,
        "lng": 8.78666667,
      },
      "locationId": "BRE",
      "name": "Bremen",
      "slug": "bremen-bremen-germany",
      "subdivision": null,
      "timezone": "Europe/Berlin",
      "type": "airport",
    },
  ],
]
`;

exports[`returns PRG suggestions 1`] = `
Array [
  Object {
    "city": Object {
      "locationId": "prague_cz",
      "name": "Prague",
      "slug": "prague-czech-republic",
    },
    "country": null,
    "location": Object {
      "lat": 50.1008333,
      "lng": 14.26,
    },
    "locationId": "PRG",
    "name": "Václav Havel Airport Prague",
    "slug": "vaclav-havel-airport-prague-prague-czech-republic",
    "subdivision": null,
    "timezone": "Europe/Prague",
    "type": "airport",
  },
  Object {
    "city": null,
    "country": Object {
      "locationId": "CZ",
      "name": "Czech Republic",
      "slug": "czech-republic",
    },
    "location": Object {
      "lat": 50.0755381,
      "lng": 14.4378005,
    },
    "locationId": "prague_cz",
    "name": "Prague",
    "slug": "prague-czech-republic",
    "subdivision": null,
    "timezone": "Europe/Prague",
    "type": "city",
  },
  Object {
    "city": Object {
      "locationId": "medina_sa",
      "name": "Medina",
      "slug": "medina-saudi-arabia",
    },
    "country": null,
    "location": Object {
      "lat": 24.5533333,
      "lng": 39.705,
    },
    "locationId": "MED",
    "name": "Prince Mohammad bin Abdulaziz",
    "slug": "prince-mohammad-bin-abdulaziz-medina-saudi-arabia",
    "subdivision": null,
    "timezone": "Asia/Riyadh",
    "type": "airport",
  },
  Object {
    "city": Object {
      "locationId": "pristina_xk",
      "name": "Pristina",
      "slug": "pristina-unknown-region",
    },
    "country": null,
    "location": Object {
      "lat": 42.5727778,
      "lng": 21.0358333,
    },
    "locationId": "PRN",
    "name": "Pristina International",
    "slug": "pristina-international-pristina-unknown-region",
    "subdivision": null,
    "timezone": "Europe/Belgrade",
    "type": "airport",
  },
  Object {
    "city": Object {
      "locationId": "gassim_sa",
      "name": "Gassim",
      "slug": "gassim-saudi-arabia",
    },
    "country": null,
    "location": Object {
      "lat": 26.3027778,
      "lng": 43.7738889,
    },
    "locationId": "ELQ",
    "name": "Prince Nayef bin Abdulaziz Regional",
    "slug": "prince-nayef-bin-abdulaziz-regional-gassim-saudi-arabia",
    "subdivision": null,
    "timezone": "Asia/Riyadh",
    "type": "airport",
  },
  Object {
    "city": Object {
      "locationId": "barcelona_es",
      "name": "Barcelona",
      "slug": "barcelona-spain",
    },
    "country": null,
    "location": Object {
      "lat": 41.2969444,
      "lng": 2.07833333,
    },
    "locationId": "BCN",
    "name": "Barcelona–El Prat",
    "slug": "barcelona-el-prat-barcelona-spain",
    "subdivision": null,
    "timezone": "Europe/Madrid",
    "type": "airport",
  },
]
`;

exports[`returns PRG suggestions in cs-CZ 1`] = `
Array [
  Object {
    "city": null,
    "country": Object {
      "locationId": "CZ",
      "name": "Česká republika",
      "slug": "ceska-republika",
    },
    "location": Object {
      "lat": 50.0755381,
      "lng": 14.4378005,
    },
    "locationId": "prague_cz",
    "name": "Praha",
    "slug": "praha-ceska-republika",
    "subdivision": null,
    "timezone": "Europe/Prague",
    "type": "city",
  },
  Object {
    "city": Object {
      "locationId": "prague_cz",
      "name": "Praha",
      "slug": "praha-ceska-republika",
    },
    "country": null,
    "location": Object {
      "lat": 50.1008333,
      "lng": 14.26,
    },
    "locationId": "PRG",
    "name": "Letiště Václava Havla Praha",
    "slug": "letiste-vaclava-havla-praha-praha-ceska-republika",
    "subdivision": null,
    "timezone": "Europe/Prague",
    "type": "airport",
  },
  Object {
    "city": null,
    "country": Object {
      "locationId": "ID",
      "name": "Indonésie",
      "slug": "indonesie",
    },
    "location": Object {
      "lat": -8.6837074,
      "lng": 116.2895173,
    },
    "locationId": "praya_id",
    "name": "Praya, Lombok",
    "slug": "praya-indonesia",
    "subdivision": null,
    "timezone": "Asia/Makassar",
    "type": "city",
  },
  Object {
    "city": Object {
      "locationId": "luang-prabang_la",
      "name": "Luang Prabang",
      "slug": "luang-prabang-laos",
    },
    "country": null,
    "location": Object {
      "lat": 19.8977778,
      "lng": 102.160833,
    },
    "locationId": "LPQ",
    "name": "Luang Prabang International Airport",
    "slug": "luang-prabang-international-airport-luang-prabang-laos",
    "subdivision": null,
    "timezone": "Asia/Vientiane",
    "type": "airport",
  },
  Object {
    "city": null,
    "country": Object {
      "locationId": "CV",
      "name": "Kapverdy",
      "slug": "kapverdy",
    },
    "location": Object {
      "lat": 14.93305,
      "lng": -23.5133267,
    },
    "locationId": "praia_cv",
    "name": "Praia",
    "slug": "praia-kapverdy",
    "subdivision": null,
    "timezone": "Atlantic/Cape_Verde",
    "type": "city",
  },
  Object {
    "city": null,
    "country": Object {
      "locationId": "LA",
      "name": "Laos",
      "slug": "laos",
    },
    "location": Object {
      "lat": 19.8833959,
      "lng": 102.1346874,
    },
    "locationId": "luang-prabang_la",
    "name": "Luang Prabang",
    "slug": "luang-prabang-laos",
    "subdivision": null,
    "timezone": "Asia/Vientiane",
    "type": "city",
  },
  Object {
    "city": Object {
      "locationId": "patna_in",
      "name": "Patna",
      "slug": "patna-indie",
    },
    "country": null,
    "location": Object {
      "lat": 25.5913889,
      "lng": 85.0880556,
    },
    "locationId": "PAT",
    "name": "Jay Prakash Narayan International Airport",
    "slug": "jay-prakash-narayan-international-airport-patna-indie",
    "subdivision": null,
    "timezone": "Asia/Calcutta",
    "type": "airport",
  },
]
`;

exports[`returns many PRG suggestions in cs-CZ 1`] = `
Array [
  Array [
    Object {
      "city": null,
      "country": Object {
        "locationId": "CZ",
        "name": "Česká republika",
        "slug": "ceska-republika",
      },
      "location": Object {
        "lat": 50.0755381,
        "lng": 14.4378005,
      },
      "locationId": "prague_cz",
      "name": "Praha",
      "slug": "praha-ceska-republika",
      "subdivision": null,
      "timezone": "Europe/Prague",
      "type": "city",
    },
    Object {
      "city": Object {
        "locationId": "prague_cz",
        "name": "Praha",
        "slug": "praha-ceska-republika",
      },
      "country": null,
      "location": Object {
        "lat": 50.1008333,
        "lng": 14.26,
      },
      "locationId": "PRG",
      "name": "Letiště Václava Havla Praha",
      "slug": "letiste-vaclava-havla-praha-praha-ceska-republika",
      "subdivision": null,
      "timezone": "Europe/Prague",
      "type": "airport",
    },
    Object {
      "city": null,
      "country": Object {
        "locationId": "ID",
        "name": "Indonésie",
        "slug": "indonesie",
      },
      "location": Object {
        "lat": -8.6837074,
        "lng": 116.2895173,
      },
      "locationId": "praya_id",
      "name": "Praya, Lombok",
      "slug": "praya-indonesia",
      "subdivision": null,
      "timezone": "Asia/Makassar",
      "type": "city",
    },
    Object {
      "city": Object {
        "locationId": "luang-prabang_la",
        "name": "Luang Prabang",
        "slug": "luang-prabang-laos",
      },
      "country": null,
      "location": Object {
        "lat": 19.8977778,
        "lng": 102.160833,
      },
      "locationId": "LPQ",
      "name": "Luang Prabang International Airport",
      "slug": "luang-prabang-international-airport-luang-prabang-laos",
      "subdivision": null,
      "timezone": "Asia/Vientiane",
      "type": "airport",
    },
    Object {
      "city": null,
      "country": Object {
        "locationId": "CV",
        "name": "Kapverdy",
        "slug": "kapverdy",
      },
      "location": Object {
        "lat": 14.93305,
        "lng": -23.5133267,
      },
      "locationId": "praia_cv",
      "name": "Praia",
      "slug": "praia-kapverdy",
      "subdivision": null,
      "timezone": "Atlantic/Cape_Verde",
      "type": "city",
    },
    Object {
      "city": null,
      "country": Object {
        "locationId": "LA",
        "name": "Laos",
        "slug": "laos",
      },
      "location": Object {
        "lat": 19.8833959,
        "lng": 102.1346874,
      },
      "locationId": "luang-prabang_la",
      "name": "Luang Prabang",
      "slug": "luang-prabang-laos",
      "subdivision": null,
      "timezone": "Asia/Vientiane",
      "type": "city",
    },
    Object {
      "city": Object {
        "locationId": "patna_in",
        "name": "Patna",
        "slug": "patna-indie",
      },
      "country": null,
      "location": Object {
        "lat": 25.5913889,
        "lng": 85.0880556,
      },
      "locationId": "PAT",
      "name": "Jay Prakash Narayan International Airport",
      "slug": "jay-prakash-narayan-international-airport-patna-indie",
      "subdivision": null,
      "timezone": "Asia/Calcutta",
      "type": "airport",
    },
  ],
  Array [
    Object {
      "city": null,
      "country": Object {
        "locationId": "CZ",
        "name": "Česká republika",
        "slug": "ceska-republika",
      },
      "location": Object {
        "lat": 50.0755381,
        "lng": 14.4378005,
      },
      "locationId": "prague_cz",
      "name": "Praha",
      "slug": "praha-ceska-republika",
      "subdivision": null,
      "timezone": "Europe/Prague",
      "type": "city",
    },
    Object {
      "city": Object {
        "locationId": "prague_cz",
        "name": "Praha",
        "slug": "praha-ceska-republika",
      },
      "country": null,
      "location": Object {
        "lat": 50.1008333,
        "lng": 14.26,
      },
      "locationId": "PRG",
      "name": "Letiště Václava Havla Praha",
      "slug": "letiste-vaclava-havla-praha-praha-ceska-republika",
      "subdivision": null,
      "timezone": "Europe/Prague",
      "type": "airport",
    },
    Object {
      "city": null,
      "country": Object {
        "locationId": "ID",
        "name": "Indonésie",
        "slug": "indonesie",
      },
      "location": Object {
        "lat": -8.6837074,
        "lng": 116.2895173,
      },
      "locationId": "praya_id",
      "name": "Praya, Lombok",
      "slug": "praya-indonesia",
      "subdivision": null,
      "timezone": "Asia/Makassar",
      "type": "city",
    },
    Object {
      "city": Object {
        "locationId": "luang-prabang_la",
        "name": "Luang Prabang",
        "slug": "luang-prabang-laos",
      },
      "country": null,
      "location": Object {
        "lat": 19.8977778,
        "lng": 102.160833,
      },
      "locationId": "LPQ",
      "name": "Luang Prabang International Airport",
      "slug": "luang-prabang-international-airport-luang-prabang-laos",
      "subdivision": null,
      "timezone": "Asia/Vientiane",
      "type": "airport",
    },
    Object {
      "city": null,
      "country": Object {
        "locationId": "CV",
        "name": "Kapverdy",
        "slug": "kapverdy",
      },
      "location": Object {
        "lat": 14.93305,
        "lng": -23.5133267,
      },
      "locationId": "praia_cv",
      "name": "Praia",
      "slug": "praia-kapverdy",
      "subdivision": null,
      "timezone": "Atlantic/Cape_Verde",
      "type": "city",
    },
    Object {
      "city": null,
      "country": Object {
        "locationId": "LA",
        "name": "Laos",
        "slug": "laos",
      },
      "location": Object {
        "lat": 19.8833959,
        "lng": 102.1346874,
      },
      "locationId": "luang-prabang_la",
      "name": "Luang Prabang",
      "slug": "luang-prabang-laos",
      "subdivision": null,
      "timezone": "Asia/Vientiane",
      "type": "city",
    },
    Object {
      "city": Object {
        "locationId": "patna_in",
        "name": "Patna",
        "slug": "patna-indie",
      },
      "country": null,
      "location": Object {
        "lat": 25.5913889,
        "lng": 85.0880556,
      },
      "locationId": "PAT",
      "name": "Jay Prakash Narayan International Airport",
      "slug": "jay-prakash-narayan-international-airport-patna-indie",
      "subdivision": null,
      "timezone": "Asia/Calcutta",
      "type": "airport",
    },
  ],
]
`;
